--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
   <div
     class="panel active"
     style="
-      background-image: url('https://images.unsplash.com/photo-1558979158-65a1eaa08691?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80');
+      background-image: url('https://images.unsplash.com/photo-1638190654504-0f3e627545ef?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80');
     "
   >
-    <h3>Explore The World</h3>
+    <h3>Explore the World</h3>
   </div>
   <div
     class="panel"
     style="
-      background-image: url('https://images.unsplash.com/photo-1572276596237-5db2c3e16c5d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80');
+      background-image: url('https://images.unsplash.com/photo-1638190653680-fd733822ab2b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=735&q=80');
     "
   >
     <h3>Wild Forest</h3>
@@ -18,7 +18,7 @@
   <div
     class="panel"
     style="
-      background-image: url('https://images.unsplash.com/photo-1507525428034-b723cf961d3e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1353&q=80');
+      background-image: url('https://images.unsplash.com/photo-1638214754860-d27e80954589?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80');
     "
   >
     <h3>Sunny Beach</h3>
@@ -26,17 +26,18 @@
   <div
     class="panel"
     style="
-      background-image: url('https://images.unsplash.com/photo-1551009175-8a68da93d5f9?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1351&q=80');
+      background-image: url('https://images.unsplash.com/photo-1638204997506-6dd11dd187de?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80');
     "
   >
-    <h3>City on Winter</h3>
+    <h3>City</h3>
   </div>
+
   <div
     class="panel"
     style="
-      background-image: url('https://images.unsplash.com/photo-1549880338-65ddcdfd017b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80');
+      background-image: url('https://images.unsplash.com/photo-1638201545793-480a67be5972?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80');
     "
   >
-    <h3>Mountains - Clouds</h3>
+    <h3>Trippy</h3>
   </div>
 </div>
